--- a/build.gradle
+++ b/build.gradle
@@ -318,6 +318,7 @@ project(':iceberg-aws') {
     compileOnly 'software.amazon.awssdk:sts'
     compileOnly 'software.amazon.awssdk:dynamodb'
     compileOnly 'software.amazon.awssdk:sns'
+    compileOnly 'software.amazon.awssdk:sqs'
 
     compileOnly("org.apache.hadoop:hadoop-common") {
       exclude group: 'org.apache.avro', module: 'avro'
