--- a/build.gradle
+++ b/build.gradle
@@ -318,6 +318,8 @@ project(':iceberg-aws') {
     compileOnly 'software.amazon.awssdk:sts'
     compileOnly 'software.amazon.awssdk:dynamodb'
     compileOnly 'software.amazon.awssdk:cloudwatch'
+    compileOnly 'software.amazon.awssdk:cloudwatchlogs'
+    compileOnly 'software.amazon.cloudwatchlogs:aws-embedded-metrics'
 
     compileOnly("org.apache.hadoop:hadoop-common") {
       exclude group: 'org.apache.avro', module: 'avro'
