--- a/versions.props
+++ b/versions.props
@@ -22,6 +22,7 @@ com.aliyun.oss:aliyun-sdk-oss = 3.10.2
 javax.xml.bind:jaxb-api = 2.3.1
 javax.activation:activation = 1.1.1
 org.glassfish.jaxb:jaxb-runtime = 2.3.3
+software.amazon.cloudwatchlogs:* = 2.0.0-beta-1
 software.amazon.awssdk:* = 2.17.131
 org.projectnessie:* = 0.20.1
 com.google.cloud:libraries-bom = 24.1.0
