--- a/build.gradle
+++ b/build.gradle
@@ -319,6 +319,7 @@ project(':iceberg-aws') {
     compileOnly 'software.amazon.awssdk:dynamodb'
     compileOnly 'software.amazon.awssdk:sns'
     compileOnly 'software.amazon.awssdk:sqs'
+    compileOnly 'software.amazon.awssdk:lambda'
 
     compileOnly("org.apache.hadoop:hadoop-common") {
       exclude group: 'org.apache.avro', module: 'avro'
